--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.11.1",
     "@lottiefiles/dotlottie-react": "^0.17.14",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
@@ -19,6 +20,7 @@
     "firebase-admin": "^13.0.2",
     "framer-motion": "^12.34.0",
     "isomorphic-dompurify": "^3.0.0-rc.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "marked": "^15.0.6",
     "next": "^15.1.0",
