--- a/.gitignore
+++ b/.gitignore
@@ -16,24 +16,31 @@ dist
 # Firebase service account
 *-firebase-adminsdk-*.json
 
-# IDE
+# IDE & AI tools
 .vscode/*
 !.vscode/extensions.json
 .idea
+.claude
+.windsurf
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
+# Source assets (originals kept outside repo)
+assets/
+
 # OS
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Playwright
 test-results/
@@ -47,3 +54,6 @@ public/uploads/*
 # TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# Vercel
+.vercel
