--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "firebase-admin": "^13.0.2",
     "isomorphic-dompurify": "^3.0.0-rc.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "marked": "^15.0.6",
     "next": "^15.1.0",
